Fixed: Title alignment next to the UOL logo - centered

--- a/site-sass/site-specific/site.header.scss
+++ b/site-sass/site-specific/site.header.scss
@@ -44,36 +44,36 @@
 
 
 .site-branding {
-   
+
    margin-bottom: $mobile-side-pad;
-   
-   
+
+
    @include mq(tablet) {
    margin-bottom: 0;
    	float: left;
-   
+
    }
-   
-   	.site-title { 
+
+   	.site-title {
      @include font-family(helvetica);
      @include font-weight(black);
      @include font-size(16px);
      text-transform: uppercase;
      max-width: 250px;
-	 
-	 
+
+
 	 @include mq(tablet) {
 		  @include font-size(18px);
 	 }
 
   }
-  
+
 
   .site-title a {
   	color: $uni-blue;
   	text-decoration: none;
   }
-  
+
 }
 
 
@@ -81,19 +81,21 @@
 
 
 .site-branding__hero-wording {
+	justify-content: center;
+
 	@include flexbox;
 	@include justify-content(flex-start);
 	@include flex-direction(column);
-	
+
 	margin-top: $mobile-side-pad;
-	
+
 	@include mq(tablet) {
 		 margin-top: 0;
 		 margin-left: $desktop-side-pad;
 	}
-	
-	
-	
+
+
+
 }
 
 
@@ -102,17 +104,17 @@
 	color: $uni-blue;
 	max-width: 300px;
 	display: block;
-	
+
 	@include mq(tablet) {
-		
+
 	max-width: 250px;
-	
+
 	}
-	
+
 	@include hocus() {
 		color: $uni-grey;
 	}
-	
+
 }
 
 
@@ -121,14 +123,13 @@
 
 
 	@include mq(desktop) {
-	
+
 	}
 
 	@include mq(wide) {
-		
+
 	}
 
 	@include mq(extraWide) {
-		
-	}
 
+	}
